#2 Adding modal and fixing structure

--- a/src/templates/sections/index.njk
+++ b/src/templates/sections/index.njk
@@ -4,23 +4,40 @@
 {% endblock %}
 
 {% block content %}
-  <div id="imageModal" class="modal">
+  <div id="servicesOneModal" class="modal">
     <div class="modal-dialog">
       <!-- Modal content-->
-      <div class="modal-content-offices">
-        <div class="modal-close-btn-container-offices cursor-pointer" id="imageClose">
+      <div class="modal-content-services">
+        <div class="modal-close-btn cursor-pointer" id="imageClose">
           <span class="close"><img src="./img/icons/close-modal.png" class="close-modal-img"></span>
         </div>
-        <div class="modal-title-gallery neopraxis-flex-column">
+        <div class="modal-title-gallery aguaviento-flex-column">
 
         </div>
-        <div class="modal-slider">
-          <div class="office-slider-item-modal"></div>
-          <div class="office-slider-item-modal"></div>
-          <div class="office-slider-item-modal"></div>
+        <div class="servicesOne">
+          <div class="modal-service-image one"></div>
+          <div class="modal-service-image two"></div>
+          <div class="modal-service-image three"></div>
         </div>
       </div>
+    </div>
+  </div>
+  <div id="servicesTwoModal" class="modal">
+    <div class="modal-dialog">
+      <!-- Modal content-->
+      <div class="modal-content-services">
+        <div class="modal-close-btn cursor-pointer" id="imageCloseTwo">
+          <span class="close"><img src="./img/icons/close-modal.png" class="close-modal-img"></span>
+        </div>
+        <div class="modal-title-gallery aguaviento-flex-column">
 
+        </div>
+        <div class="servicesTwo">
+          <div class="modal-service-image one"></div>
+          <div class="modal-service-image two"></div>
+          <div class="modal-service-image three"></div>
+        </div>
+      </div>
     </div>
   </div>
   <div class="fade">
@@ -30,7 +47,7 @@
         <img src="./img/icons/oval-3@3x.png" class="header-second-oval">
         <img src="./img/icons/oval-3-copy@3x.png" class="header-last-oval">
         <div class="header-text-box one">
-          <p class="no-margin-text header-text-info white-text aguaviento-font-montserrat-medium">Nuestros clientes</p>
+          <h1 class="no-margin-text header-text-info white-text aguaviento-font-montserrat-medium">Nuestros clientes</h1>
           <div class="header-text-divider"></div>
           <p class="no-margin-text header-text-about white-text aguaviento-font-montserrat-light">Tenemos siempre en la mira al usuario de nuestros productos. Conocemos sus expectativas y hacemos lo necesario para ofrecer el producto que requiere. A través de sus ojos, vemos un mundo más limpio, un mejor mundo.</p>
         </div>
@@ -42,7 +59,7 @@
         <img src="./img/icons/oval-3@3x.png" class="header-second-oval">
         <img src="./img/icons/oval-3-copy@3x.png" class="header-last-oval">
         <div class="header-text-box one">
-          <p class="no-margin-text header-text-info white-text aguaviento-font-montserrat-medium">Compromiso</p>
+          <h1 class="no-margin-text header-text-info white-text aguaviento-font-montserrat-medium">Compromiso</h1>
           <div class="header-text-divider"></div>
           <p class="no-margin-text header-text-about white-text aguaviento-font-montserrat-light">Ofrecemos soluciones integrales a las necesidades de nuestros actuales y futuros clientes. Su problema es nuestro desafío.</p>
         </div>
@@ -54,7 +71,7 @@
         <img src="./img/icons/oval-3@3x.png" class="header-second-oval">
         <img src="./img/icons/oval-3-copy@3x.png" class="header-last-oval">
         <div class="header-text-box one">
-          <p class="no-margin-text header-text-info white-text aguaviento-font-montserrat-medium">Desempeño</p>
+          <h1 class="no-margin-text header-text-info white-text aguaviento-font-montserrat-medium">Desempeño</h1>
           <div class="header-text-divider"></div>
           <p class="no-margin-text header-text-about white-text aguaviento-font-montserrat-light">Productos amigables con el medio. Fragancias vanguardistas. Formulaciones de alto rendimiento.</p>
         </div>
@@ -68,7 +85,7 @@
     </div>
     </a>
     <div class="blue-filler-title-box">
-      <p class="no-margin-text white-text aguaviento-font-montserrat-medium blue-filler-title-text">Soluciones en productos de limpieza</p>
+      <h1 class="no-margin-text white-text aguaviento-font-montserrat-medium blue-filler-title-text">Soluciones en productos de limpieza</h1>
     </div>
     <div class="blue-filler-button-box aguaviento-flex-column cursor-pointer hover-light-blue">
       <p class="no-margin-text dark-indigo-text aguaviento-font-montserrat-light uppercase">contacto</p>
@@ -76,11 +93,11 @@
   </div>
   <div class="first-section bottom aguaviento-flex-column" id="firstSection">
     <div class="first-section-title-box">
-      <p class="no-margin-text nice-blue-text letter-spacing-less-dot-one first-section-title-text aguaviento-font-montserrat-medium">Grupo Aguaviento</p>
+      <h2 class="no-margin-text nice-blue-text letter-spacing-less-dot-one first-section-title-text aguaviento-font-montserrat-medium">Grupo Aguaviento</h2>
       <img src="./img/icons/group-11@3x.png" class="first-section-title-icon">
     </div>
     <div class="first-section-content-box">
-      <p class="first-section-content-text no-margin-text aguaviento-font-montserrat-light greyish-brow-text text-center">Trabajamos en servicio de los hogares, especializada en el diseño, desarrollo, creación y fabricación de productos de limpieza. Orgullosamente mexicanos, reconocidos por su alto desempeño, calidad y precio.</p>
+      <p class="first-section-content-text no-margin-text aguaviento-font-montserrat-light greyish-brown-text text-center">Somos una empresa especializada en el desarrollo y fabricación de productos de limpieza orgullosamente mexicanos, reconocidos por su alto desempeño, calidad y valor. Sabemos que el respeto a nuestro medio ambiente es una condición para nuestra trascendencia.   </p>
     </div>
     <div class="first-section-oval-box">
       <img src="./img/icons/oval-3-copy-3@3x.png" class="first-section-oval-image">
@@ -89,7 +106,7 @@
     <div class="frist-section-row aguaviento-flex-row">
       <div class="first-section-feature-box">
         <div class="first-section-feature-title-box">
-          <p class="fisrt-section-feature-title-text no-margin-text letter-spacing-less-dot-one nice-blue-text aguaviento-font-montserrat-medium">Sustentabilidad</p>
+          <h2 class="fisrt-section-feature-title-text no-margin-text letter-spacing-less-dot-one nice-blue-text aguaviento-font-montserrat-medium">Sustentabilidad</h2>
         </div>
         <div class="first-section-feature-image first"></div>
         <a href="" class="aguaviento-link">
@@ -100,7 +117,7 @@
       </div>
       <div class="first-section-feature-box">
         <div class="first-section-feature-title-box">
-          <p class="fisrt-section-feature-title-text no-margin-text letter-spacing-less-dot-one nice-blue-text aguaviento-font-montserrat-medium">Nosotros</p>
+          <h2 class="fisrt-section-feature-title-text no-margin-text letter-spacing-less-dot-one nice-blue-text aguaviento-font-montserrat-medium">Nosotros</h2>
         </div>
         <div class="first-section-feature-image second"></div>
         <a href="" class="aguaviento-link">
@@ -114,7 +131,7 @@
   <div class="first-parallax-section">
     <img src="./img/group-30@3x.png" class="parallax-section-circle-img">
     <div class="first-parallax-section-title-box">
-      <p class="first-parallax-section-title-text no-margin-text aguaviento-font-montserrat-medium letter-spacing-less-dot-one white-text">Productos vanguardistas de alto desempeño</p>
+      <h2 class="first-parallax-section-title-text no-margin-text aguaviento-font-montserrat-medium letter-spacing-less-dot-one white-text">Productos que acompañan tu bienestar.</h2>
       <div class="first-parallax-section-button-box aguaviento-flex-column hover-light-blue cursor-pointer">
         <p class="first-parallax-section-button-text bluish-text no-margin-text uppercase aguaviento-font-montserrat-light letter-spacing-dot-six">conoce más</p>
       </div>
@@ -122,26 +139,23 @@
   </div>
   <div class="second-section bottom aguaviento-flex-column">
     <div class="second-section-title-box">
-      <p class="no-margin-text nice-blue-text letter-spacing-less-dot-one second-section-title-text aguaviento-font-montserrat-medium">Servicios</p>
+      <h2 class="no-margin-text nice-blue-text letter-spacing-less-dot-one second-section-title-text aguaviento-font-montserrat-medium">Servicios</h2>
       <img src="./img/icons/group-11@3x.png" class="second-section-title-icon">
     </div>
-    <div class="second-section-content-box">
-      <p class="second-section-content-text no-margin-text aguaviento-font-montserrat-light greyish-brow-text text-center">En nuestro centro de tecnología desarrollamos fórmulas de acuerdo a las necesidades de los clientes. Fabricamos productos vanguardistas de alto desempeño, así como f’órmulas económicas para distribución masiva.</p>
-    </div>
     <div class="second-section-services-container aguaviento-flex-row">
-      <a href="#" id="imageBtn">
+      <a href="#" id="imageBtnOne">
         <div class="second-section-service-box first border aguaviento-flex-row">
           <div class="service-info-box">
-            <p class="service-title no-margin-text aguaviento-font-montserrat-medium nice-blue-text letter-spacing-less-dot-one">Desarrollo</p>
+            <h2 class="service-title no-margin-text aguaviento-font-montserrat-medium nice-blue-text letter-spacing-less-dot-one">Desarrollo</h2>
             <p class="service-about-text no-margin-text aguaviento-font-montserrat-light greyish-brown-text">En nuestro centro de tecnología creamos formulas de acuerdo a los requerimientos de los clientes y consumidores. Propuestas económicas, vanguardistas o de calidades Premium: hacemos lo que el mercado pida. </p>
           </div>
           <img src="./img/icons/miscroscopio-06@3x.png" class="service-icon first">
         </div>
       </a>
-      <a href="#">
+      <a href="#" id="imageBtnTwo">
         <div class="second-section-service-box aguaviento-flex-row">
           <div class="service-info-box">
-            <p class="service-title no-margin-text aguaviento-font-montserrat-medium nice-blue-text letter-spacing-less-dot-one">Maquila</p>
+            <h2 class="service-title no-margin-text aguaviento-font-montserrat-medium nice-blue-text letter-spacing-less-dot-one">Maquila</h2>
             <p class="service-about-text no-margin-text aguaviento-font-montserrat-light greyish-brown-text">Nos preocupamos para que su marca sea la mejor. Contamos la experiencia, tecnología y profesionalismo para hacerlo.</p>
           </div>
           <img src="./img/icons/botella-07@3x.png" class="service-icon second">
@@ -163,7 +177,7 @@
   </div>
   <div class="third-section-box aguaviento-flex-column">
     <div class="third-section-title-box">
-      <p class="no-margin-text nice-blue-text letter-spacing-less-dot-one third-section-title-text aguaviento-font-montserrat-medium">Nuestros productos</p>
+      <h1 class="no-margin-text nice-blue-text letter-spacing-less-dot-one third-section-title-text aguaviento-font-montserrat-medium">Productos</h1>
       <img src="./img/icons/group-11@3x.png" class="third-section-title-icon">
     </div>
     <div class="nice-blue-divider third-section"></div>
@@ -171,45 +185,45 @@
       <img src="./img/icons/oval-3-copy-3@3x.png" class="first-section-oval-image">
     </div>
     <div class="products-slider">
-      <a href="" class="cursor-pointer product-link">
+      <a href="#" class="cursor-pointer product-link">
         <div class="product-item-box aguaviento-flex-column">
           <img src="./img/icons/iconos-08@3x.png" class="product-item-icon">
-          <p class="product-item-text aguaviento-font-montserrat-medium nice-blue-text no-margin-text">Detergentes</p>
+          <h1 class="product-item-text aguaviento-font-montserrat-medium nice-blue-text no-margin-text">Detergentes</h1>
         </div>
       </a>
-      <a href="" class="cursor-pointer product-link">
+      <a href="#" class="cursor-pointer product-link">
         <div class="product-item-box aguaviento-flex-column">
           <img src="./img/icons/iconos-09@3x.png" class="product-item-icon">
-          <p class="product-item-text aguaviento-font-montserrat-medium nice-blue-text no-margin-text">Suavizantes</p>
+          <h1 class="product-item-text aguaviento-font-montserrat-medium nice-blue-text no-margin-text">Suavizantes</h1>
         </div>
       </a>
-      <a href="" class="cursor-pointer product-link">
+      <a href="#" class="cursor-pointer product-link">
         <div class="product-item-box aguaviento-flex-column">
           <img src="./img/icons/iconos-10@3x.png" class="product-item-icon">
-          <p class="product-item-text aguaviento-font-montserrat-medium nice-blue-text no-margin-text">Limpiadores</p>
+          <h1 class="product-item-text aguaviento-font-montserrat-medium nice-blue-text no-margin-text">Limpiadores</h1>
         </div>
       </a>
-      <a href="" class="cursor-pointer product-link">
+      <a href="#" class="cursor-pointer product-link">
         <div class="product-item-box aguaviento-flex-column">
           <img src="./img/icons/iconos-11@3x.png" class="product-item-icon">
-          <p class="product-item-text aguaviento-font-montserrat-medium nice-blue-text no-margin-text active">Tecnología Verde</p>
+          <h1 class="product-item-text aguaviento-font-montserrat-medium nice-blue-text no-margin-text active">Tecnología Verde</h1>
         </div>
       </a>
-      <a href="" class="cursor-pointer product-link">
+      <a href="#" class="cursor-pointer product-link">
         <div class="product-item-box aguaviento-flex-column">
           <img src="./img/icons/iconos-11@3x.png" class="product-item-icon">
-          <p class="product-item-text aguaviento-font-montserrat-medium nice-blue-text no-margin-text active">Tecnología Verde</p>
+          <h1 class="product-item-text aguaviento-font-montserrat-medium nice-blue-text no-margin-text active">Tecnología Verde</h1>
         </div>
       </a>
-      <a href="" class="cursor-pointer product-link">
+      <a href="#" class="cursor-pointer product-link">
         <div class="product-item-box aguaviento-flex-column">
           <img src="./img/icons/iconos-11@3x.png" class="product-item-icon">
-          <p class="product-item-text aguaviento-font-montserrat-medium nice-blue-text no-margin-text active">Tecnología Verde</p>
+          <h1 class="product-item-text aguaviento-font-montserrat-medium nice-blue-text no-margin-text active">Tecnología Verde</h1>
         </div>
       </a>
     </div>
     <a href="" class="aguaviento-link">
-      <div class="first-section-feature-button-box aguaviento-flex-column hover-nice-blue cursor-pointer">
+      <div class="last-section-feature-button-box aguaviento-flex-column hover-nice-blue cursor-pointer">
         <p class="first-section-feature-button-text uppercase letter-spacing-dot-six aguaviento-font-montserrat-light white-text">Conoce más</p>
       </div>
     </a>
