--- a/src/styl/sections/index.styl
+++ b/src/styl/sections/index.styl
@@ -68,11 +68,11 @@
 .aguaviento-header.two
   width 100vw !important
   height 442px !important
-  background url("../img/group-13@3x.png")
+  background url("../img/manos.jpg")
   background-attachment scroll
   background-repeat no-repeat
   background-size cover
-  background-position center bottom
+  background-position right center
 .aguaviento-header.three
   width 100vw !important
   height 442px !important
@@ -252,7 +252,7 @@
   height 37px
   border-radius 4px
 .first-parallax-section-title-text
-  font-size 29px
+  font-size 26px
   padding-bottom 20px
 .first-parallax-section-title-box
   width 361px
@@ -274,6 +274,7 @@
   position absolute
   right -22px
   top -5px
+  z-index -1
 .second-section-content-box
   width 600px
   z-index -1
@@ -329,7 +330,7 @@
 .third-section-title-text
   font-size 30px
 .third-section-title-box
-  width 295px
+  width 158px
   position relative
 .third-section-title-icon
   width 44px
@@ -382,16 +383,15 @@
   padding-bottom 7px
 .product-link
   text-decoration none
-  width 160px !important
+  width 150px !important
 .product-item-icon
   height 75px
   width auto
 .product-item-box
-  margin-left 20px
-  margin-right 20px
-  width 130px !important
+  margin auto
+  width 150px !important
 .products-slider
-  width 50%
+  width 600px
   padding-top 105px
   padding-bottom 127px
 .product-prev, .product-next
@@ -485,11 +485,121 @@
 .modal-subtitle
   width 358px
   text-align center
-.modal-content-offices
-    background-color transparent
-    margin 10% auto
-    padding 0
-    border transparent
-    width 80%
-    max-width 376px
-    position relative
+.modal-content-services
+  background-color transparent
+  margin 10% auto
+  padding 0
+  border transparent
+  width 80%
+  max-width 376px
+  position relative
+.last-section-feature-button-box
+  width 135px
+  height 37px
+  background-color #0d74b9
+  border-radius 4px
+  margin auto
+  margin-top 30px
+.servicesOne
+  width 378px
+.servicesTwo
+  width 378px
+.modal-service-image.one
+  width 376px
+  height 238px 
+  background url("../img/screen-shot-2017-05-26-at-2-07-32-pm@3x.png")
+  background-attachment scroll
+  background-repeat no-repeat
+  background-size cover
+  background-position center top
+.modal-service-image.two
+  width 376px
+  height 238px 
+  background url("../img/screen-shot-2017-05-26-at-2-07-32-pm@3x.png")
+  background-attachment scroll
+  background-repeat no-repeat
+  background-size cover
+  background-position center top
+.modal-service-image.three
+  width 376px
+  height 238px 
+  background url("../img/screen-shot-2017-05-26-at-2-07-32-pm@3x.png")
+  background-attachment scroll
+  background-repeat no-repeat
+  background-size cover
+  background-position center top
+.service-prev, .service-next
+  width 40px
+  height auto
+.service-prev
+  position absolute
+  left -50px
+  top 50%
+  margin-top -20px
+.service-next
+  position absolute
+  right -50px
+  top 50%
+  margin-top -30px
+.modal-close-btn
+  position absolute
+  right 0px
+  top -30px
+.slick-dots
+  list-style none
+  position absolute
+  bottom -45px
+  display block
+  width 100%
+  padding 0
+  list-style none
+  text-align center
+.slick-dots li 
+  position relative
+  display inline-block
+  width 20px
+  height 20px
+  margin 0 5px
+  padding 0
+  cursor pointer
+.slick-dots li button 
+  font-size 0
+  line-height 0
+  display block
+  width 20px
+  height 20px
+  padding 5px
+  cursor pointer
+  color transparent
+  border 0
+  outline none
+  background transparent
+.slick-dots li.slick-active button::before 
+  font-family slick
+  font-size 16px
+  line-height 20px
+  position absolute
+  top 0px
+  left 0px
+  width 20px
+  height 20px
+  content "•"
+  text-align center
+  opacity 0.75
+  color #ffffff
+  -webkit-font-smoothing antialiased
+.slick-dots li button::before
+  font-family slick
+  font-size 16px
+  line-height 20px
+  position absolute
+  top 0px
+  left 0px
+  width 20px
+  height 20px
+  content "•"
+  text-align center
+  opacity 0.25
+  color #ffffff
+  -webkit-font-smoothing antialiased
+    
