#4 change parallax image in code

--- a/src/styl/sections/innovation.styl
+++ b/src/styl/sections/innovation.styl
@@ -21,7 +21,7 @@
     width 100vw
     height 37vw
     margin-top 87px
-    background url("../img/mountain-forest.jpg")
+    background url("../img/pexels-photo.jpg")
     background-attachment fixed
     background-repeat no-repeat 
     background-size cover
