--- a/src/templates/sections/innovation.njk
+++ b/src/templates/sections/innovation.njk
@@ -11,7 +11,7 @@
   <div class="innovation-parallax-container"></div>
   <div class="innovation-container">
     <div class="innovation-content">
-      <div class="aguaviento-section-title">
+      <div class="aguaviento-section-title innovation">
         <img src="img/icons/group-11@3x.png" alt="">
         <h2 class="title aguaviento-font-montserrat-regular">Innovación y sustentabilidad</h2>
       </div>
