--- a/src/templates/partials/navbar.njk
+++ b/src/templates/partials/navbar.njk
@@ -1,4 +1,4 @@
-<nav class="{% if section == 'innovation' %} aguaviento-navbar-innovation {% else %} neopraxis-navbar {% endif %}" id="neopraxisNavbarSite">
+<nav class="{% if section == 'innovation' %} aguaviento-navbar-innovation neopraxis-navbar{% else %} neopraxis-navbar {% endif %}" id="neopraxisNavbarSite">
   <button class="hamburger hamburger--collapse" type="button" id="neopraxis-hamburger-menu">
     <span class="hamburger-box">
       <span class="hamburger-inner"></span>
