16 change title decoraction image position

--- a/src/styl/sections/innovation.styl
+++ b/src/styl/sections/innovation.styl
@@ -1,4 +1,4 @@
-.aguaviento-section-title.innovation
+.aguaviento-section-title
   text-align center
   margin 47px auto
   position relative
@@ -12,8 +12,10 @@
     height 44px
     position absolute
     top -10px
-    right 57px
     z-index -1
+  &.innovation
+    img
+      right 50px
     
 .innovation
 /*Parallax*/
@@ -87,7 +89,7 @@
     width 220px
     img
       top: 4px;
-      right: -5px;
+      right: -10px;
   .innovation-content
     padding-bottom 30px !important
   .innovation-content-info
