#16 remove unnecessary important

--- a/src/styl/sections/company.styl
+++ b/src/styl/sections/company.styl
@@ -5,7 +5,7 @@
 	.aguaviento-section-title.company
     margin 87px auto 40px auto 
 		img
-			right 185px !important
+			right 185px
 			
 .company-divider-container
   width 604px
