#16 add key fot google maps API

--- a/src/templates/partials/base.njk
+++ b/src/templates/partials/base.njk
@@ -30,7 +30,7 @@
     {% block js_libs_config %}
     {% endblock %}
     
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDkrZ61d_-cyJHEuzhSjLaSKgF_l7CnRy4"></script>
     
     <script src="js/{{ projectFilesName }}.libs.js"></script>
     {% block js_project_config %}
