#2 Fixing modal links

--- a/src/templates/sections/index.njk
+++ b/src/templates/sections/index.njk
@@ -143,7 +143,7 @@
       <img src="./img/icons/group-11@3x.png" class="second-section-title-icon">
     </div>
     <div class="second-section-services-container aguaviento-flex-row">
-      <a href="#" id="imageBtnOne">
+      <a href="#servicesOneModal" id="imageBtnOne">
         <div class="second-section-service-box first border aguaviento-flex-row">
           <div class="service-info-box">
             <h2 class="service-title no-margin-text aguaviento-font-montserrat-medium nice-blue-text letter-spacing-less-dot-one">Desarrollo</h2>
@@ -152,7 +152,7 @@
           <img src="./img/icons/miscroscopio-06@3x.png" class="service-icon first">
         </div>
       </a>
-      <a href="#" id="imageBtnTwo">
+      <a href="#servicesTwoModal" id="imageBtnTwo">
         <div class="second-section-service-box aguaviento-flex-row">
           <div class="service-info-box">
             <h2 class="service-title no-margin-text aguaviento-font-montserrat-medium nice-blue-text letter-spacing-less-dot-one">Maquila</h2>
