# add company png

--- a/src/styl/sections/company.styl
+++ b/src/styl/sections/company.styl
@@ -1,6 +1,5 @@
-.aguaviento-content
-  &.company
-    width 700px !important
+.aguaviento-container .aguaviento-content.company
+    width 700px
 	
 	.aguaviento-section-title.company
     margin 87px auto 40px auto 
@@ -110,7 +109,7 @@
     width 50%
     
     .image-container
-      margin 90px auto auto 130px
+      margin 90px auto auto 140px
       img
         width 221px
         height 165px
@@ -171,6 +170,139 @@
 .remodal.video.remodal-is-initialized.remodal-is-opened,
 .remodal.video.remodal-is-initialized.remodal-is-opening
   background transparent
+
+@media only screen and (max-width 710px)
+  .aguaviento-container .aguaviento-content.company
+    width 500px
+    .aguaviento-section-title.company
+      img
+        right 100px
+    .company-divider-container
+      width 500px
+      margin 0 auto 24px auto
+    .company-description
+      width 500px
+    .company-features
+      margin 0 auto 160px auto
+      display flex
+      flex-wrap wrap
+      justify-content space-around
+      width 388px
+      .company-feature
+        margin-right 0
+      .vision, mission
+        margin-bottom 50px
+  .description
+    padding-left 20px
+  .image-container
+    margin 90px auto auto 60px !important
+  .remodal.video
+    width 600px
+    height 337px
+    iframe
+      width 600px
+      height 337px
+
+@media only screen and (max-width 415px)
+  .aguaviento-container .aguaviento-content.company
+    width 375px
+    .aguaviento-section-title.company
+      img
+        right 45px
+    .company-divider-container
+      width 315px
+      margin 0 auto 24px auto
+    .company-description
+      width: 276px;
+      line-height: 24px;
+    .company-features
+      margin 0 auto 60px auto
+      display flex
+      flex-wrap wrap
+      justify-content space-around
+      width 388px
+      .company-feature
+        margin-right 0
+      .vision, mission
+        margin-bottom 50px
+  .company-certification
+    height 700px
+    display flex
+    flex-direction column
+    .iso-description
+      background #74d7d4
+      width 100%
+    .iso-image
+      width 100%
+      height 500px
+      display flex
+      justify-content center
+      align-items center
+      .image-container
+        margin 0 !important
+      
+  .remodal.video
+    width 600px
+    height 337px
+    iframe
+      width 600px
+      height 337px
+
+@media only screen and (max-width 375px)
+  .aguaviento-container .aguaviento-content.company
+    width 320px
+    .aguaviento-section-title.company
+      margin-top 57px
+      img
+        right 20px
+    .company-divider-container
+      width 290px
+      margin 0 auto 24px auto
+    .company-description
+      width 276px
+      line-height 24px
+      margin-bottom 35px
+    .company-features
+      margin 0 auto 60px auto
+      display flex
+      flex-wrap wrap
+      justify-content space-around
+      width 229px
+      
+      .company-feature
+        margin-right 0
+        margin-bottom 50px
+      :last-child
+        margin-bottom 0
+  .company-certification
+    height 700px
+    display flex
+    flex-direction column
+    .iso-description
+      background #74d7d4
+      width 100%
+    .iso-image
+      width 100%
+      height 500px
+      display flex
+      justify-content center
+      align-items center
+      .image-container
+        margin 0 !important
+  .modal-divider
+    width 214px !important  
+  .modal-content
+    width 230px !important
+    p
+      width 230px
+      line-height 20px
+  .remodal.video
+    width 300px
+    height 168.5px
+    
+    iframe
+      width 300px
+      height 168.5px
 
 
 
