#22 add mobile styles

--- a/src/styl/sections/plant.styl
+++ b/src/styl/sections/plant.styl
@@ -48,5 +48,10 @@
             position absolute
             top 48px
             left 45px
-            
+@media only screen and (max-width 414px)
+  .aguaviento-content.plant
+    width 300px
+    .aguaviento-section-title
+      img
+        right 35px
     
