#22 add class plant to aguaviento content

--- a/src/templates/sections/plant.njk
+++ b/src/templates/sections/plant.njk
@@ -9,7 +9,7 @@
 
 {% block content %}
   <div class="aguaviento-container">
-    <div class="aguaviento-content">
+    <div class="aguaviento-content plant">
       <div class="aguaviento-section-title plant">
         <img src="img/icons/group-11@3x.png" alt="">
         <h2 class="title aguaviento-font-montserrat-regular">Instalaciones</h2>
