#22 add products class to aguaviento-content

--- a/src/templates/sections/products.njk
+++ b/src/templates/sections/products.njk
@@ -29,7 +29,7 @@
         </div>
       </div>
     </div>
-    <div class="aguaviento-content">
+    <div class="aguaviento-content products">
       <div class="aguaviento-section-title products">
         <img src="img/icons/group-11@3x.png" alt="">
         <h2 class="title aguaviento-font-montserrat-regular">Productos</h2>
