#17 add hover on buttons

--- a/src/styl/sections/company.styl
+++ b/src/styl/sections/company.styl
@@ -40,6 +40,8 @@
     font-size 9.5px
     cursor pointer
     letter-spacing 1px
+    &:hover
+      background #0965a3
   .vision,.mission
     button
       width 115px
@@ -248,7 +250,7 @@
       width 600px
       height 337px
 
-@media only screen and (max-width 375px)
+@media only screen and (max-width 414px)
   .aguaviento-container .aguaviento-content.company
     width 320px
     .aguaviento-section-title.company
