--- a/src/styl/sections/contact.styl
+++ b/src/styl/sections/contact.styl
@@ -85,6 +85,8 @@
             background-color #0d74b9
             font-size 9px;
             color #fff
+            &:hover
+              background #0965a3
       
   	.aguaviento-location
       margin 45px 0 101px 0
