--- a/src/styl/sections/products.styl
+++ b/src/styl/sections/products.styl
@@ -102,6 +102,7 @@
       font-size 15px
       margin 0
       padding 10px 0
+      border-bottom 1px solid transparent
     &.detergents
       img
         width 72px
@@ -118,12 +119,14 @@
       img
         width 72px
         height 60px
-      p
-        border-bottom 1px solid #0d74b9
     &.industrial
       img
         width 72px
         height 51px
+    &:hover
+      p
+        border-bottom 1px solid #0d74b9
+      
   :last-child
     margin-right 0
 .products-divider
