--- a/src/templates/sections/index.njk
+++ b/src/templates/sections/index.njk
@@ -184,43 +184,37 @@
     <div class="third-section-oval-box">
       <img src="./img/icons/oval-3-copy-3@3x.png" class="first-section-oval-image">
     </div>
-    <div class="products-slider">
-      <a href="#" class="cursor-pointer product-link">
-        <div class="product-item-box aguaviento-flex-column">
-          <img src="./img/icons/iconos-08@3x.png" class="product-item-icon">
-          <h1 class="product-item-text aguaviento-font-montserrat-medium nice-blue-text no-margin-text">Detergentes</h1>
-        </div>
-      </a>
-      <a href="#" class="cursor-pointer product-link">
-        <div class="product-item-box aguaviento-flex-column">
-          <img src="./img/icons/iconos-09@3x.png" class="product-item-icon">
-          <h1 class="product-item-text aguaviento-font-montserrat-medium nice-blue-text no-margin-text">Suavizantes</h1>
-        </div>
-      </a>
-      <a href="#" class="cursor-pointer product-link">
-        <div class="product-item-box aguaviento-flex-column">
-          <img src="./img/icons/iconos-10@3x.png" class="product-item-icon">
-          <h1 class="product-item-text aguaviento-font-montserrat-medium nice-blue-text no-margin-text">Limpiadores</h1>
-        </div>
-      </a>
-      <a href="#" class="cursor-pointer product-link">
-        <div class="product-item-box aguaviento-flex-column">
-          <img src="./img/icons/iconos-11@3x.png" class="product-item-icon">
-          <h1 class="product-item-text aguaviento-font-montserrat-medium nice-blue-text no-margin-text active">Tecnología Verde</h1>
-        </div>
-      </a>
-      <a href="#" class="cursor-pointer product-link">
-        <div class="product-item-box aguaviento-flex-column">
-          <img src="./img/icons/iconos-11@3x.png" class="product-item-icon">
-          <h1 class="product-item-text aguaviento-font-montserrat-medium nice-blue-text no-margin-text active">Tecnología Verde</h1>
-        </div>
-      </a>
-      <a href="#" class="cursor-pointer product-link">
-        <div class="product-item-box aguaviento-flex-column">
-          <img src="./img/icons/iconos-11@3x.png" class="product-item-icon">
-          <h1 class="product-item-text aguaviento-font-montserrat-medium nice-blue-text no-margin-text active">Tecnología Verde</h1>
-        </div>
-      </a>
+    <div class="products-categories">
+      <div class="products-category detergents cursor-pointer">
+        <a href="products.html">
+          <img src="img/icons/iconos-08@3x.png" alt="">
+          <p class="aguaviento-font-montserrat-medium">Detergentes</p>
+        </a>
+      </div>
+      <div class="products-category softeners cursor-pointer">
+        <a href="products.html">
+          <img src="img/icons/iconos-09@3x.png" alt="">
+          <p class="aguaviento-font-montserrat-medium">Suavizantes</p>
+        </a>
+      </div>
+      <div class="products-category cleaners cursor-pointer">
+        <a href="products.html">
+          <img src="img/icons/iconos-10@3x.png" alt="">
+          <p class="aguaviento-font-montserrat-medium">Limpiadores</p>
+        </a>
+      </div>
+      <div class="products-category green-tech cursor-pointer">
+        <a href="products.html">
+          <img src="img/icons/iconos-11@3x.png" alt="">
+          <p class="aguaviento-font-montserrat-medium">Tecnologia Verde</p>
+        </a>
+      </div>
+      <div class="products-category industrial cursor-pointer">
+        <a href="products.html">
+          <img src="img/icons/maquila@3x.png" alt="">
+          <p class="aguaviento-font-montserrat-medium">Industrial</p>
+        </a>
+      </div>
     </div>
     <a href="" class="aguaviento-link">
       <div class="last-section-feature-button-box aguaviento-flex-column hover-nice-blue cursor-pointer">
