--- a/src/templates/sections/index.njk
+++ b/src/templates/sections/index.njk
@@ -109,7 +109,7 @@
           <h2 class="fisrt-section-feature-title-text no-margin-text letter-spacing-less-dot-one nice-blue-text aguaviento-font-montserrat-medium">Sustentabilidad</h2>
         </div>
         <div class="first-section-feature-image first"></div>
-        <a href="" class="aguaviento-link">
+        <a href="innovation.html" class="aguaviento-link">
           <div class="first-section-feature-button-box aguaviento-flex-column hover-nice-blue cursor-pointer">
             <p class="first-section-feature-button-text uppercase letter-spacing-dot-six aguaviento-font-montserrat-light white-text">Conoce más</p>
           </div>
@@ -120,7 +120,7 @@
           <h2 class="fisrt-section-feature-title-text no-margin-text letter-spacing-less-dot-one nice-blue-text aguaviento-font-montserrat-medium">Nosotros</h2>
         </div>
         <div class="first-section-feature-image second"></div>
-        <a href="" class="aguaviento-link">
+        <a href="company.html" class="aguaviento-link">
           <div class="first-section-feature-button-box aguaviento-flex-column hover-nice-blue cursor-pointer">
             <p class="first-section-feature-button-text uppercase letter-spacing-dot-six aguaviento-font-montserrat-light white-text">Conoce más</p>
           </div>
@@ -162,11 +162,6 @@
         </div>
       </a>
     </div>
-    <a href="" class="aguaviento-link">
-      <div class="first-section-feature-button-box aguaviento-flex-column hover-nice-blue cursor-pointer">
-        <p class="first-section-feature-button-text uppercase letter-spacing-dot-six aguaviento-font-montserrat-light white-text">ver más</p>
-      </div>
-    </a>
   </div>
   <div class="blue-parallax aguaviento-flex-column">
     <div class="blue-parallax-overlay aguaviento-flex-column">
@@ -216,7 +211,7 @@
         </a>
       </div>
     </div>
-    <a href="" class="aguaviento-link">
+    <a href="products.html" class="aguaviento-link">
       <div class="last-section-feature-button-box aguaviento-flex-column hover-nice-blue cursor-pointer">
         <p class="first-section-feature-button-text uppercase letter-spacing-dot-six aguaviento-font-montserrat-light white-text">Conoce más</p>
       </div>
