#16 add contact in home section

--- a/src/templates/sections/index.njk
+++ b/src/templates/sections/index.njk
@@ -88,7 +88,9 @@
       <h1 class="no-margin-text white-text aguaviento-font-montserrat-medium blue-filler-title-text">Soluciones en productos de limpieza</h1>
     </div>
     <div class="blue-filler-button-box aguaviento-flex-column cursor-pointer hover-light-blue">
-      <p class="no-margin-text dark-indigo-text aguaviento-font-montserrat-light uppercase">contacto</p>
+      <a href="contact.html" class="footer-link">
+        <p class="no-margin-text dark-indigo-text aguaviento-font-montserrat-light uppercase">contacto</p>
+      </a>
     </div>
   </div>
   <div class="first-section bottom aguaviento-flex-column" id="firstSection">
