#24 fix product-line divider width

--- a/src/styl/sections/products.styl
+++ b/src/styl/sections/products.styl
@@ -357,6 +357,8 @@
           width 225px
           .product-line-product .product-image-container
             width 225px
+      .product-line-divider
+        width 225px
     .maquila
       .brands
         width 225px
