#1 fix company video modal postion

--- a/src/templates/sections/company.njk
+++ b/src/templates/sections/company.njk
@@ -52,7 +52,7 @@
             <img src="img/icons/iconooos-14@3x.png" alt="Video de la empresa">
           </div>
           <div class="company-feature-title aguaviento-font-montserrat-extralight">
-            <a id="company-video" data-remodal-target="company-video" onClick="runVideo()"><button>VIDEO DE LA EMPRESA</button></a>
+            <a data-remodal-target="company-video" onClick="runVideo()"><button>VIDEO DE LA EMPRESA</button></a>
           </div>
         </div>
       </div>
@@ -127,7 +127,7 @@
 <div class="remodal video" data-remodal-id="company-video">
     <div class="aguaviento-modal video">
     <button id="video-close-button" data-remodal-action="close" class="modal-close video" onClick="stopVideo()"></button>
-      <iframe id="aguaviento-video" width="700" height="393.75" src="https://www.youtube.com/embed/8eqGyMWYwHA?controls=0" frameborder="0" allowfullscreen></iframe>
+      <iframe width="700" height="394" src="https://www.youtube.com/embed/8eqGyMWYwHA?controls=0" frameborder="0" allowfullscreen></iframe>
     </div>
 </div>
 {% endblock %}
