--- a/src/styl/sections/mobile.styl
+++ b/src/styl/sections/mobile.styl
@@ -242,6 +242,11 @@
     background-size: cover;
     background-position: center bottom;
   }
+  
+  .aguaviento-header .oval-box img {
+    opacity .7
+  }
+  
   .blue-filler-title-text {
     font-size: 24px;
     width: 80%;
@@ -334,6 +339,7 @@
     top: -30px;
     z-index: -1;
     display: none;
+    opacity .5
   }
   .nice-blue-divider.third-section {
     width: 80%;
