--- a/src/styl/sections/company.styl
+++ b/src/styl/sections/company.styl
@@ -17,6 +17,8 @@
   font-weight bold
   text-align center
   width 580px
+  p
+    line-height 23px
   span
     font-weight normal
 
@@ -78,7 +80,7 @@
   color #fff
   height 359px
   .iso-description
-    background #74D7D4
+    background #6AD8D5
     width 50%
     display flex
     justify-content flex-end
@@ -282,8 +284,10 @@
     display flex
     flex-direction column
     .iso-description
-      background #74d7d4
+      background #6AD8D5
       width 100%
+      p
+        width 90%
     .iso-image
       width 100%
       height 500px
