#26 edit slick dots size and space between

--- a/src/styl/sections/index.styl
+++ b/src/styl/sections/index.styl
@@ -559,7 +559,7 @@
   display inline-block
   width 20px
   height 20px
-  margin 0 5px
+  margin 0 0
   padding 0
   cursor pointer
 .slick-dots li button 
@@ -576,7 +576,7 @@
   background transparent
 .slick-dots li.slick-active button::before 
   font-family slick
-  font-size 16px
+  font-size 27px
   line-height 20px
   position absolute
   top 0px
@@ -590,7 +590,7 @@
   -webkit-font-smoothing antialiased
 .slick-dots li button::before
   font-family slick
-  font-size 16px
+  font-size 27px
   line-height 20px
   position absolute
   top 0px
