#26 edit letter-spacing in section titles

--- a/src/styl/sections/innovation.styl
+++ b/src/styl/sections/innovation.styl
@@ -6,7 +6,7 @@
     color #0d74b9
     font-size 1.79em
     margin 0
-    letter-spacing 1px
+    letter-spacing .5px
   img
     width 44px
     height 44px
