#26 edit slick prev and next buttons and products description container size

--- a/src/styl/sections/products.styl
+++ b/src/styl/sections/products.styl
@@ -159,7 +159,7 @@
       margin-right 0
 
 .products-features-container
-  width 700px
+  width 704px
   margin 100px auto 150px auto
   
   .hidden
@@ -234,6 +234,7 @@
             color #585858
             font-size 13px
             padding-right 3px
+            height 18px
   .product-line-divider
     height 1px 
     margin 0 auto
