#26 change file name for left top circle

--- a/src/templates/sections/contact.njk
+++ b/src/templates/sections/contact.njk
@@ -52,6 +52,6 @@
         </div>
       </div>
     </div>
-    <img class="contact-oval" src="img/oval-3-copy-4.png" alt="">
+    <img class="contact-oval" src="img/oval-3-copy-4.svg" alt="">
   </div>
 {% endblock %}
