--- a/src/templates/partials/base.njk
+++ b/src/templates/partials/base.njk
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     {% block meta %}{% endblock %}
     {% block extra_css %}{% endblock %}
+    <meta property="og:image" content="http://aguaviento.com/og-image.jpg">
+    <meta property="og:image:height" content="1312">
+    <meta property="og:image:width" content="875">
+    <meta property="og:title" content="Aguaviento">
+    <meta property="og:description" content="Tenemos siempre en la mira al usuario de nuestros productos. Conocemos sus expectativas y hacemos lo necesario para ofrecer el producto que requiere. A trav&eacute;s de sus ojos, vemos un mundo m&aacute;s limpio, un mejor mundo.">
+    <meta property="og:url" content="http://aguaviento.com">
     <link rel="stylesheet" href="css/{{ projectFilesName }}.libs.css">
     <link rel='stylesheet' href='https://cdn.rawgit.com/jonsuh/hamburgers/e8cd462c/dist/hamburgers.css'>
     <link rel="stylesheet" href="css/main.css">
@@ -29,9 +35,9 @@
     </div>
     {% block js_libs_config %}
     {% endblock %}
-    
+
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDkrZ61d_-cyJHEuzhSjLaSKgF_l7CnRy4"></script>
-    
+
     <script src="js/{{ projectFilesName }}.libs.js"></script>
     {% block js_project_config %}
     {% endblock %}
