#28 add some sliders

--- a/src/styl/sections/products.styl
+++ b/src/styl/sections/products.styl
@@ -31,7 +31,7 @@
     position relative
     margin-left auto
     margin-right auto
-    width 65px
+    width auto
     top -60px
     li.slick-active button::before, li button::before
       content ''
@@ -45,7 +45,7 @@
       margin-right 10px
       :hover
         background #fff
-      
+
       button
         width 10px
         background #b2e1f7
@@ -94,7 +94,7 @@
     display inline-block
     text-align center
     margin-right 30px
-    img 
+    img
       margin-bottom 35px
     p
       display block
@@ -161,7 +161,7 @@
 .products-features-container
   width 704px
   margin 100px auto 150px auto
-  
+
   .hidden
     display none
 
@@ -236,13 +236,13 @@
             padding-right 3px
             height 18px
   .product-line-divider
-    height 1px 
+    height 1px
     margin 0 auto
     width 585px
     background #dedede
 
 .product-line-divider
-  height 1px 
+  height 1px
   background #dedede
 
 .maquila
@@ -255,7 +255,7 @@
     flex-wrap wrap
     align-items center
     justify-content center
-    
+
     .brand
       display inline-block
       /*change margins when you add new brands*/
